--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+  <div class="relogio">
+    <div>
+      <span id="horas">00</span>
+      <span class="tempo">Horas</span>
+    </div>
+
+    <div>
+      <span id="minutos">00</span>
+      <span class="tempo">Minutos</span>
+    </div>
+
+    <div>
+      <span id="segundos">00</span>
+      <span class="tempo">Segundos</span>
+    </div>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 
